<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalendarWidget</string>
    <string name="widget_name">My first widget</string>
    <string name="widget_text">Text in widget</string>
    <string name="title_activity_widget_setting">WidgetSettingActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="ok">Ok</string>
    <string name="widget_setting">Настройки календаря</string>
    <string name="widget_shown">Виджет отображается</string>
    <string name="widget_shown_end_time">Отобразить время окончания</string>
    <string name="widget_shown_place">Отобразить место</string>
    <string name="date_format">Формат даты</string>
    <string name="widget_hide_event_when">Скрывать событие когда:</string>
    <string name="widget_current_single_day_events">Текущие однодневные события:</string>
    <string name="widget_onclick_starts">Нажатие на событие запускает:</string>
    <string name="widget_on_icon_click_starts">Нажатие на значок запускает:</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="title_activity_notification_friends">NotificationFriends</string>
    <string name="title_activity_get_one_item">GetOneItem</string>
    <string name="title_activity_widget_one_config">WidgetOneConfig</string>
    <string name="title_activity_autorization">AutorizationActivity</string>
    <string name="title_activity_search_people_calendar">SearchPeopleCalendar</string>
    <string name="title_activity_google_plus">GooglePlusActivity</string>
    <string name="widget_type">Тип виджета</string>
    <string name="widget_show_in_keyboard_line">Отобразить в линейке клавиш:</string>
    <string name="widget_day_count">Количество дней:</string>
    <string name="widget_hide_single_day_events">Скрыть однодневные события:</string>
    <string name="title_activity_clock">Clock</string>
    <string name="title_activity_maps_activyty">MapsActivyty</string>
    <string name="title_activity_settings">Settings</string>
    <string name="fileSize">File Size</string>
    <string name="currentDir">Current Dir</string>
    <string name="title_activity_single_group">SingleGroupAssignment</string>
    <string name="title_activity_group_members">GroupMembers</string>
    <string name="title_activity_assignment_by_group">AssignmentByGroup</string>
    <string name="title_activity_single_event">SingleEvent</string>
    <string name="title_activity_event_members">EventMembers</string>
    <string name="data_not_found">Data not found</string>
    <string name="add_commment">Add comment</string>
    <string name="add_comment">Add comment</string>
    <string name="comments">Comments</string>
    <string name="add_users_to_event">Add users to event</string>
    <string name="create_event">Create event</string>
    <string name="comment_was_not_sended">Комментарий не был отправлен</string>
    <string name="comment_was_send">Комментарий был отправлен</string>
    <string name="title_activity_splesh">SpleshActivity</string>
    <string name="group_setting">Настройки группы</string>
    <string name="event_setting">Настройки события</string>

</resources>