<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/create_event"
        android:icon="@drawable/create_event"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/create_event" />
    <item
        android:id="@+id/action_group_setting"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_launcher"
        android:title="@string/group_setting" />

    <item
        android:id="@+id/action_event_setting"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/change_event"
        android:title="@string/event_setting" />

    <item
        android:id="@+id/show_list_my_tasks"
        android:title="Показать список моих заданий"
        android:icon="@drawable/ic_launcher"
        android:showAsAction="always" />

</menu>